2009-10-10  Corrado Primier  <bardo@aur.archlinux.org>

	* Release bump: 15

	* PKGBUILD: updated for the 2.6.31 kernel

	* acerhk.install: changed modprobe.conf path

2009-06-24  Corrado Primier  <bardo@aur.archlinux.org>

	* Release bump: 14

	* PKGBUILD: updated for the 2.6.30 kernel, added compilation patch

	* 2.6.30.patch: added

2009-04-09  Corrado Primier  <bardo@aur.archlinux.org>

	* Release bump: 13

	* PKGBUILD: updated for the 2.6.29 kernel

2009-01-16  Corrado Primier  <bardo@aur.archlinux.org>

	* Release bump: 12

	* PKGBUILD: updated for the 2.6.28 kernel

2008-10-16  Corrado Primier  <bardo@aur.archlinux.org>

	* Release bump: 11

	* PKGBUILD: updated for the 2.6.27 kernel

2008-08-12  Corrado Primier  <bardo@aur.archlinux.org>

	* Release bump: 10

	* PKGBUILD: updated for the 2.6.26 kernel, moved to $srcdir/$pkgdir

2008-05-27  Corrado Primier  <bardo@aur.archlinux.org>

	* Release bump: 9

	* PKGBUILD: updated for the 2.6.25 kernel

	* ChangeLog: added