@@ -1,3 +1,9 @@
+2010-01-09  Chris Brannon <cmbrannon79@gmail.com>
+
+	* Release bump: 16
+
+	* PKGBUILD: updated for the 2.6.32 kernel
+
 2009-10-10  Corrado Primier  <bardo@aur.archlinux.org>
 
 	* Release bump: 15
